[project]
name = "time-tracker"
version = "0.1.0"
description = "Generate bi-monthly Clockify time reports as formatted Google Sheets tabs, split by project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tzdata>=2026.2",
]

[project.scripts]
bot = "bot:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bot.py", "clockify_report.py", "daily_timeline.py"]
sources = ["."]
